# finite-automata-toolbox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  creation_dock.cpp  creation_dock.hpp  main.cpp  main_graphics_view.cpp  main_graphics_view.hpp  main_window.cpp  main_window.hpp  main_window.ui  match_simulator.cpp  match_simulator.hpp  operations_dock.cpp  operations_dock.hpp  side_graphics_view.cpp  side_graphics_view.hpp  view_dock.cpp  view_dock.hpp
automaton_graph/: CMakeLists.txt  automaton_graph.cpp  automaton_graph.hpp  automaton_node.cpp  automaton_node.hpp  circle_node.cpp  circle_node.hpp  double_circle_node.cpp  double_circle_node.hpp  invisible_node.cpp  invisible_node.hpp  match_simulator.cpp  match_simulator.hpp  transition_edge.cpp  transition_edge.hpp
finite_automaton/: CMakeLists.txt  finite_automaton.cpp  finite_automaton.hpp  finite_automaton_test.cpp  regex_ast.cpp  regex_driver.cpp  regex_driver.hpp  regex_lexer.lex  regex_parser.ypp
finite_automaton/regex_driver/: CMakeLists.txt  regex_ast.cpp  regex_ast.hpp  regex_driver.hpp  regex_parser.ypp
qt_graph/: CMakeLists.txt  edge.cpp  edge.hpp  graph.cpp  graph.hpp  node.cpp  node.hpp  utility.cpp  utility.hpp
scripts/: run_format.sh
ui/: CMakeLists.txt  automata_scene.cpp  automata_scene.hpp  creation_dock.cpp  creation_dock.hpp  main_graphics_view.cpp  main_graphics_view.hpp  main_window.cpp  main_window.hpp  menu_bar.cpp  menu_bar.hpp  operations_dock.cpp  operations_dock.hpp  scene_tab_bar.cpp  scene_tab_bar.hpp  utility.cpp  utility.hpp  view_dock.cpp  view_dock.hpp
